[gd_scene load_steps=3 format=3 uid="uid://cl7otipp24se3"]

[ext_resource type="Script" uid="uid://t8qs4yrvhekj" path="res://collectable_item.gd" id="1_t0gva"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kdpfu"]
radius = 8.0

[node name="CollectableItem" type="Area2D"]
script = ExtResource("1_t0gva")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kdpfu")

[node name="Info" type="Label" parent="."]
offset_right = 1.0
offset_bottom = 23.0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
